# RepoExplainer

./: .gitignore  LICENSE  README.md  dev.md  local_file_loader.py  main.py  overrides.txt  pyproject.toml  requirements-ipex.txt  requirements.txt
examples/tokio-gemini/: list.md
examples/tokio-gemini/examples/: chat.md  connect.md  custom-executor-tokio-context.md  custom-executor.md  dump.md  echo-udp.md  echo.md  hello_world.md  named-pipe-multi-client.md  named-pipe-ready.md  named-pipe.md  print_each_packet.md  proxy.md  tinydb.md  tinyhttp.md  udp-client.md  udp-codec.md
examples/tokio-gemini/stress-test/examples/: simple_echo_tcp.md
examples/tokio-gemini/tokio-macros/src/: entry.md  lib.md  select.md
examples/tokio-gemini/tokio-stream/src/: empty.md  iter.md  lib.md  macros.md  once.md  pending.md  stream_close.md  stream_ext.md  stream_map.md  wrappers.md
examples/tokio-gemini/tokio-test/src/: io.md  lib.md  macros.md  stream_mock.md  task.md
examples/tokio-gemini/tokio-util/src/: cfg.md  compat.md  context.md  either.md  lib.md  loom.md  tracing.md
examples/tokio-gemini/tokio/src/: blocking.md  fuzz.md  lib.md
examples/tokio-qwq/: list.md
examples/tokio-qwq/examples/: chat.md  connect.md  custom-executor-tokio-context.md  custom-executor.md  dump.md  echo-udp.md  echo.md  hello_world.md  named-pipe-multi-client.md  named-pipe-ready.md  named-pipe.md  print_each_packet.md  proxy.md  tinydb.md  tinyhttp.md  udp-client.md  udp-codec.md
examples/tokio-qwq/stress-test/examples/: simple_echo_tcp.md
examples/tokio-qwq/tokio-macros/src/: entry.md  (+2 more)
(+1278 files in other folders)
